# Resona

./: .gitignore  Makefile  README.md  package-lock.json  package.json
.github/workflows/: db.yml
apps/web/: README.md  next.config.ts  package.json  vitest.config.ts
apps/web/app/: layout.tsx
apps/web/app/agents/: actions.ts  page.tsx
apps/web/app/calls/: page.tsx
apps/web/app/calls/[id]/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/components/: app-shell.tsx  waveform.tsx
apps/web/lib/: agents.ts  calls.ts  stats.ts
apps/web/lib/__tests__/: agents.test.ts  calls.test.ts  stats.test.ts
apps/web/lib/supabase/: server.ts
docs/plans/: 2026-06-06-resona-design.md
docs/superpowers/plans/: 2026-06-06-call-intelligence-ui.md  2026-06-06-foundation-data-layer.md  2026-06-06-voice-agent-core.md  2026-06-06-web-app-foundation.md
services/voice/: .env.example  README.md  pyproject.toml
services/voice/resona_voice/: __init__.py  app.py  config.py  fakes.py  orchestrator.py  protocols.py  tools.py  twiml.py  types.py
services/voice/tests/: test_app.py  test_orchestrator.py  test_tools.py
supabase/: config.toml  seed.sql
supabase/migrations/: 0001_extensions.sql  0002_tenancy.sql  0003_voice_config.sql  0004_calls.sql  0005_intelligence.sql  0006_integrations_audit.sql  0007_rpcs.sql
supabase/tests/: 0001_extensions_test.sql  0002_tenancy_rls_test.sql  0003_voice_config_test.sql  0004_calls_fts_test.sql  0005_intelligence_test.sql  0006_integrations_test.sql  0007_rpcs_test.sql
